<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242D49"
    android:gravity="center"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_status_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/yellow"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/brand_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollHorizontally="true"
            android:text="@string/cona_mobile"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_status_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:clickable="false"
                android:focusable="false">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/item_color"
                    android:backgroundTint="#3D3E50"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ripple_drawable"
                    app:shapeAppearanceOverlay="@style/rounded_corner"
                    tools:ignore="UnusedAttribute" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_png"
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="15dp"
                    android:clickable="false"
                    android:padding="2dp"
                    android:src="@drawable/image_png"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/secular_one"
                    android:includeFontPadding="false"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:text="@string/back_image_replace"
                    android:textColor="@color/yellow"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintLeft_toRightOf="@id/image_png"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:clickable="false"
                android:focusable="false">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/item_color"
                    android:backgroundTint="#3D3E50"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ripple_drawable"
                    app:shapeAppearanceOverlay="@style/rounded_corner"
                    tools:ignore="UnusedAttribute" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_png3"
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="15dp"
                    android:clickable="false"
                    android:src="@drawable/google_play_png"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/secular_one"
                    android:includeFontPadding="false"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:text="@string/other_apps"
                    android:textColor="@color/yellow"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintLeft_toRightOf="@id/image_png3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:clickable="false"
                android:focusable="false">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/item_color"
                    android:backgroundTint="#3D3E50"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ripple_drawable"
                    app:shapeAppearanceOverlay="@style/rounded_corner"
                    tools:ignore="UnusedAttribute"  />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_png2"
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="15dp"
                    android:clickable="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/programmer_png"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/secular_one"
                    android:includeFontPadding="false"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:text="Dasturchi bilan bog'lanish"
                    android:textColor="@color/yellow"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintLeft_toRightOf="@id/image_png2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>