<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="false"
    android:id="@+id/constraint">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="700dp"
        android:layout_height="1200dp"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/restart_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/null_color"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/circle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:padding="5dp"
                android:src="@drawable/refresh_img" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/voice_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/null_color"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/circle">

            <ImageView
                android:id="@+id/sound_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/audio_on" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/anim_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/null_color"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/circle">

            <ImageView
                android:id="@+id/animation_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/animation_on" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/list_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/null_color"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="gone"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/circle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/list_img" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/settings_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/null_color"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/circle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/setting_img" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    </LinearLayout>

    <TextView
        android:id="@+id/salovatlar_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/constraint_shape_circle"
        android:clickable="false"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/subhanalloh"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@id/count_salovat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/count_salovat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/baloo_tammudu"
        android:text="@string/count"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/custom_progressbar_circle"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.8"
        tools:progress="60" />


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/circular_card_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/blue_color"
        android:clickable="false"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="@+id/progress_bar"
        app:layout_constraintWidth_percent="0.5"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:fontFamily="@font/baloo_tammudu"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:fontFamily="@font/baloo_tammudu"
                android:text="@string/_33"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toRightOf="@id/text_view_progress"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>



</androidx.constraintlayout.widget.ConstraintLayout>